repro_error.txt
node.exe : FAIL tests
/server/agents/repro_
loop.test.ts
At line:1 char:1
+ & "C:\Program Files
\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (FAIL te   
 sts/serv...ro_lo    
op.test.ts:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  ΓùÅ Test suite 
failed to run

    Jest encountered 
an unexpected token

    Jest failed to 
parse a file. This 
happens e.g. when 
your code or its 
dependencies use 
non-standard 
JavaScript syntax, 
or when Jest is not 
configured to 
support such syntax.

    Out of the box 
Jest supports Babel, 
which will be used 
to transform your 
files into valid JS 
based on your Babel 
configuration.

    By default 
"node_modules" 
folder is ignored by 
transformers.

    Here's what you 
can do:
     ΓÇó If you are 
trying to use 
ECMAScript Modules, 
see https://jestjs.io
/docs/ecmascript-modu
les for how to 
enable it.
     ΓÇó If you are 
trying to use 
TypeScript, see https
://jestjs.io/docs/get
ting-started#using-ty
pescript
     ΓÇó To have 
some of your 
"node_modules" files 
transformed, you can 
specify a custom "tra
nsformIgnorePatterns"
 in your config.
     ΓÇó If you need 
a custom 
transformation 
specify a 
"transform" option 
in your config.
     ΓÇó If you 
simply want to mock 
your non-JS modules 
(e.g. binary assets) 
you can stub them 
out with the 
"moduleNameMapper" 
config option.

    You'll find more 
details and examples 
of these config 
options in the docs:
    https://jestjs.io
/docs/configuration
    For information 
about custom 
transformations, see:
    https://jestjs.io
/docs/code-transforma
tion

    Details:

    
C:\Users\marte\Baked 
for Brands\bakedbot-f
or-brands\node_module
s\dotprompt\node_modu
les\yaml\browser\inde
x.js:3
    import * as YAML 
from 
'./dist/index.js'
    ^^^^^^

    SyntaxError: 
Cannot use import 
statement outside a 
module

    [0m [90m 20 
|[39m     
googleAI({ apiKey 
})[33m,[39m
     [90m 21 |[39m 
  ][33m,[39m
    [31m[1m>[22m[
39m[90m 22 |[39m   
[90m// Default to 
most cost-effective 
model (free 
tier)[39m
     [90m    |[39m 
                     
[31m[1m^[22m[39m
     [90m 23 |[39m 
  model[33m:[39m [
32m'googleai/gemini-2
.5-flash-lite'[39m[
33m,[39m
     [90m 24 |[39m 
})[33m;[39m
     [90m 25 
|[39m[0m

      at Runtime.crea
teScriptFromCode (nod
e_modules/jest-runtim
e/build/index.js:1505
:14)
      at 
Object.<anonymous> (n
ode_modules/dotprompt
/dist/index.js:82:19)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/core/src/registry.t
s:17:27)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/ai/src/generate.ts:
30:26)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/ai/src/generate/act
ion.ts:38:8)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/ai/src/model.ts:69:
38)
      at 
Object.<anonymous> (n
ode_modules/genkit/sr
c/plugin.ts:26:8)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/google-genai/src/go
ogleai/index.ts:23:8)
      at 
Object.<anonymous> (n
ode_modules/@genkit-a
i/google-genai/src/in
dex.ts:24:8)
      at 
Object.<anonymous> (s
rc/ai/genkit.ts:22:22
)
      at 
Object.<anonymous> (s
rc/server/agents/pops
.ts:21:17)
      at 
Object.<anonymous> (s
rc/app/dashboard/ceo/
agents/actions.ts:33:
15)
      at 
Object.<anonymous> (t
ests/server/agents/re
pro_loop.test.ts:111:
18)

Test Suites: 1 
failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        6.007 s
Ran all test suites 
matching /tests\\serv
er\\agents\\repro_loo
p.test.ts/i.
